# cloak

./: .gitignore  README.md  pyproject.toml
assets/franka_fr3_robotiq/: 2f85.xml  fr3_robotiq.xml  scene.xml
docs/: README.md  index.html
examples/: render_extrinsics.py
scripts/: preprocess_wrist_extrinsics.py
site/: index.html
src/: constants.py  utils.py
